// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show output from task should be able to change collapse settings: test-e2e-8TNRrm8bI9ndz4jrhYC492luGNhtMTmZ-err 1`] = `Array []`;

exports[`show output from task should be able to change collapse settings: test-e2e-8TNRrm8bI9ndz4jrhYC492luGNhtMTmZ-exit 1`] = `Array []`;

exports[`show output from task should be able to change collapse settings: test-e2e-8TNRrm8bI9ndz4jrhYC492luGNhtMTmZ-out 1`] = `
Array [
  Array [
    "[2m◼[22m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G[2m◼[22m This task will execute.
[2m◼[22m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
[2m◼[22m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.

[2m◼[22m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [2m◼[22m This is a subtask.
[2m◼[22m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [2m◼[22m This is a subtask.
  [2m◼[22m This is an another subtask.
[2m◼[22m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [33m❯[39m This is a subtask.
  [2m◼[22m This is an another subtask.
[2m◼[22m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [2m◼[22m This is an another subtask.
[2m◼[22m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [33m❯[39m This is an another subtask.
[2m◼[22m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [32m✔[39m This is an another subtask.
[2m◼[22m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[2m◼[22m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[33m❯[39m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[33m❯[39m This task will execute.
  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[33m❯[39m This task will execute.
  [2m◼[22m This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[33m❯[39m This task will execute.
  [2m◼[22m This is a subtask.
  [2m◼[22m This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[33m❯[39m This task will execute.
  [33m❯[39m This is a subtask.
  [2m◼[22m This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [2m◼[22m This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [33m❯[39m This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [32m✔[39m This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[32m✔[39m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.
[32m✔[39m This task will execute. 
",
  ],
]
`;

exports[`show output from task should be able to change concurrency setting in subtask, second subtask should finish first: test-e2e-3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-err 1`] = `Array []`;

exports[`show output from task should be able to change concurrency setting in subtask, second subtask should finish first: test-e2e-3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-exit 1`] = `Array []`;

exports[`show output from task should be able to change concurrency setting in subtask, second subtask should finish first: test-e2e-3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-out 1`] = `
Array [
  Array [
    "[2m◼[22m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G[33m❯[39m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G[33m❯[39m This task will execute.
  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [2m◼[22m This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [2m◼[22m This is a subtask.
  [2m◼[22m This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [33m❯[39m This is a subtask.
  [2m◼[22m This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [33m❯[39m This is a subtask.
  [33m❯[39m This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [33m❯[39m This is a subtask.
  [32m✔[39m This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [32m✔[39m This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G[32m✔[39m This task will execute. 
",
  ],
]
`;

exports[`show output from task should create a set of subtasks: test-e2e-JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-err 1`] = `Array []`;

exports[`show output from task should create a set of subtasks: test-e2e-JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-exit 1`] = `Array []`;

exports[`show output from task should create a set of subtasks: test-e2e-JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-out 1`] = `
Array [
  Array [
    "[2m◼[22m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G[33m❯[39m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G[33m❯[39m This task will execute.
  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [2m◼[22m This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [2m◼[22m This is a subtask.
  [2m◼[22m This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [33m❯[39m This is a subtask.
  [2m◼[22m This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [2m◼[22m This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [33m❯[39m This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[33m❯[39m This task will execute.
  [32m✔[39m This is a subtask.
  [32m✔[39m This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G[32m✔[39m This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G[32m✔[39m This task will execute. 
",
  ],
]
`;
